src/objects/Flood_Map__c.object
<CustomObject>
    <description>Object to store results from flood mapping integration.</description>
    <fields>
        <fullName>Census_Tract__c</fullName>
        <label>Census Tract</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Number__c</fullName>
        <label>Map Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearby_Description__c</fullName>
        <description>Text confirming what &quot;Nearby&quot; field is in relation to, ie &quot;Within 250 feet&quot;</description>
        <label>Nearby Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearby__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Within 250 feed of multiple flood zones?</description>
        <label>Nearby</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Flood Maps</relationshipLabel>
        <relationshipName>Flood_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFHA__c</fullName>
        <description>Is this address within a flood zone?</description>
        <label>SFHA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Flood Map</label>
    <nameField>
        <label>Flood Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flood Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>